syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpccommon.catalog";
option java_outer_classname = "TrackProto";

package catalog;

service TrackQueryService {
  rpc GetTrackFilePath(GetTrackRequest) returns (GetTrackFilePathResponse);
}

message GetTrackRequest {
  int64 trackId = 1;
}

message GetTrackFilePathResponse {
  string filePath = 1;
}
